honestly last attempt at fixing bugged out interaction after clicking project on safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,18 +15,21 @@
 html {
   overflow-y: scroll;
   scroll-behavior: smooth;
-  *:has(:popover-open) {
-    pointer-events: none;
-    touch-action: none;
-    [popover] {
-      pointer-events: auto;
-      touch-action: auto;
-    }
-    ::backdrop {
-      pointer-events: all;
-      touch-action: manipulation;
+  @media (min-resolution: .001dpcm) {
+    *:has(:popover-open) {
+      pointer-events: none;
+      touch-action: none;
+      [popover] {
+        pointer-events: auto;
+        touch-action: auto;
+      }
+      ::backdrop {
+        pointer-events: all;
+        touch-action: manipulation;
+      }
     }
   }
+
 }
 
 /* evil hack. this will run for all browsers but safari and similar */
